Kezdo es ujrakezdo progress

--- a/notebooks/source/python_teljesen_kezdo/001_alapok_adatok_es_valtozok.ipynb
+++ b/notebooks/source/python_teljesen_kezdo/001_alapok_adatok_es_valtozok.ipynb
@@ -15,45 +15,129 @@
    },
    "source": [
     "# Jupyter notebook bevezető\n",
-    "Ez a munkafüzet egy interaktív felület, ahol a jelölt rubrikákba kódot írva le lehet futtatni azokat. Az adott kódrészletet futtatni a felső menüben található gombokkal lehet.\n",
+    "Ez a munkafüzet egy interaktív felület, ahol a jelölt rubrikákba kódot írva le lehet futtatni azokat. Az adott kódrészletet futtatni a felső menüben található gombokkal lehet (Run).\n",
     "\n",
     "A megoldásaidat az adott cellába írd, töröld a\n",
-    "```\n",
+    "```python\n",
     "    # YOUR CODE HERE\n",
     "    raise NotImplementedError()\n",
     "```\n",
-    "részt. Megoldás után az adott és a következő cellát futtatsd (ezek az automatikus tesztek). Ha nem ír semmit, akkor jó a megoldás, ha hibát kapsz akkor javítsd az megoldást és futtasd mindkét cellát újra."
+    "\n",
+    "Megoldás után az adott és a következő cellát futtatsd (ezek az automatikus tesztek). Ha nem ír semmit, akkor jó a megoldás, ha hibát kapsz akkor javítsd az megoldást és futtasd mindkét cellát újra.\n",
+    "\n",
+    "Ha a notebook végéig minden teszt hiba nélkül lefut, akkor kész a feladatsor."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "f4566c83",
+   "cell_type": "markdown",
+   "id": "03d022c6",
    "metadata": {
     "nbgrader": {
      "grade": false,
-     "grade_id": "cell-10475db7f8a45046",
+     "grade_id": "cell-1f6408e0a9f33ea6",
      "locked": true,
      "schema_version": 3,
      "solution": false,
      "task": false
     }
    },
-   "outputs": [],
    "source": [
-    "# Ez a cella az eredmenyek ellenorzesehez kell, csak futtasd le\n",
-    "from io import StringIO \n",
-    "import sys\n",
+    "# Hibaüzenetek, hibakezelés\n",
     "\n",
-    "class Solution(list):\n",
-    "    def __enter__(self):\n",
-    "        self._stdout = sys.stdout\n",
-    "        sys.stdout = self._stringio = StringIO()\n",
-    "        return self\n",
-    "    def __exit__(self, *args):\n",
-    "        self.extend(self._stringio.getvalue().splitlines())\n",
-    "        del self._stringio\n",
-    "        sys.stdout = self._stdout"
+    "Néhány tipikus hibaüzenet, ha esetleg elakadnál. Nem kell most elolvasnod, csak ha hibát kapsz és nem érted, akkor itt ez esetleg segíthet.\n",
+    "\n",
+    "* `NotImplementedError` -> Nem törölted ki a # YOUR CODE HERE részt\n",
+    "* `AssertionError` -> Nem jó a feladat megoldása, a teszt hibára futott\n",
+    "* `NameError` -> Rosszul használod a Python parancsait, nézd át a kódot\n",
+    "\n",
+    "\n",
+    "## Példák\n",
+    "\n",
+    "```python\n",
+    "---------------------------------------------------------------------------\n",
+    "NotImplementedError                       Traceback (most recent call last)\n",
+    "<ipython-input-2-6d4db73a6e75> in <module>\n",
+    "      2 \n",
+    "      3     # YOUR CODE HERE\n",
+    "----> 4     raise NotImplementedError()\n",
+    "      5 \n",
+    "      6 print(solution[0])\n",
+    "\n",
+    "NotImplementedError: \n",
+    "```\n",
+    "\n",
+    "--> Nem törölted ki a kért részt, ki kell törölni és a helyére gépelni a megoldásodat.\n",
+    "\n",
+    "```python\n",
+    "---------------------------------------------------------------------------\n",
+    "AssertionError                            Traceback (most recent call last)\n",
+    "<ipython-input-4-28814bafb7f0> in <module>\n",
+    "      3 solution = get_ipython().run_line_magic('solution', '')\n",
+    "      4 assert_true(len(solution))\n",
+    "----> 5 assert_equal(float(solution[0]),  31200)\n",
+    "\n",
+    "/opt/conda/lib/python3.9/unittest/case.py in assertEqual(self, first, second, msg)\n",
+    "    829         \"\"\"\n",
+    "    830         assertion_func = self._getAssertEqualityFunc(first, second)\n",
+    "--> 831         assertion_func(first, second, msg=msg)\n",
+    "    832 \n",
+    "    833     def assertNotEqual(self, first, second, msg=None):\n",
+    "\n",
+    "/opt/conda/lib/python3.9/unittest/case.py in _baseAssertEqual(self, first, second, msg)\n",
+    "    822             standardMsg = '%s != %s' % _common_shorten_repr(first, second)\n",
+    "    823             msg = self._formatMessage(msg, standardMsg)\n",
+    "--> 824             raise self.failureException(msg)\n",
+    "    825 \n",
+    "    826     def assertEqual(self, first, second, msg=None):\n",
+    "\n",
+    "AssertionError: 312200.0 != 31200\n",
+    "```\n",
+    "\n",
+    "--> Az automatikus teszt hibát talált a megoldásodban.\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "---------------------------------------------------------------------------\n",
+    "NameError                                 Traceback (most recent call last)\n",
+    "<ipython-input-4-ba4712915cd0> in <module>\n",
+    "      1 from nose.tools import assert_equal, assert_true\n",
+    "      2 \n",
+    "----> 3 assert_true(len(solution))\n",
+    "      4 assert_equal(float(solution[0]),  31200)\n",
+    "\n",
+    "NameError: name 'solution' is not defined\n",
+    "```\n",
+    "--> Nem futtattad a megoldás celláját, csak a tesztét. Mindenképpen először a megoldás cellát kell futtatni, utána a tesztet. A bal oldali `In []` feliratot kell nézni, ha itt a [] ben van szám, akkor futtatva volt.\n",
+    "\n",
+    "```python\n",
+    "---------------------------------------------------------------------------\n",
+    "NameError                                 Traceback (most recent call last)\n",
+    "<ipython-input-10-f48fdeef71f0> in <module>\n",
+    "      2 \n",
+    "      3     \n",
+    "----> 4     prit(90 / 15 * 5200)\n",
+    "      5     \n",
+    "      6 \n",
+    "\n",
+    "NameError: name 'prit' is not defined\n",
+    "```\n",
+    "\n",
+    "--> Rosszul használsz valamilyen Python kulcsszót, itt pl el van írva a `print` helyett `prit`\n",
+    "\n",
+    "```python\n",
+    "---------------------------------------------------------------------------\n",
+    "TypeError                                 Traceback (most recent call last)\n",
+    "<ipython-input-12-1e94ef827a25> in <module>\n",
+    "      7     eletkor = input(\"Add meg az életkorod: \")\n",
+    "      8     ital = input(\"Milyen italt kérsz?: \")\n",
+    "----> 9     if eletkor < 18 and ital == \"sör\":\n",
+    "     10         print(\"Sajnos nem adhatok.\")\n",
+    "     11         exit(1)\n",
+    "\n",
+    "TypeError: '<' not supported between instances of 'str' and 'int'\n",
+    "```\n",
+    "\n",
+    "--> Rossz típusokat használsz, itt a hiba pl, hogy az `input` eredményét először számmá kell konvertálni `int(input(\"valami\"))`"
    ]
   },
   {
@@ -71,7 +155,7 @@
    },
    "source": [
     "# 1. feladatsor - egyszerű utasítások \n",
-    "## 1/a\n",
+    "## Szoba kifestés\n",
     "A 90m<sup>2</sup>-es szobádat akarod kfiesteni, egy vödör festék 15<sup>2</sup> kifestésére elég és 5200 Ft-ba kerül.\n",
     "\n",
     "**Mennyibe fog kerülni a teljes szoba kifestése?**"
@@ -79,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6c74a977",
    "metadata": {
     "nbgrader": {
@@ -91,20 +175,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31200.0\n"
+     ]
+    }
+   ],
    "source": [
-    "with Solution() as solution:\n",
-    "    \n",
-    "    ### BEGIN SOLUTION\n",
-    "    print(90 / 15 * 5200)\n",
-    "    ### END SOLUTION\n",
-    "    \n",
-    "print(solution[0])"
+    "### BEGIN SOLUTION\n",
+    "print(90 / 15 * 5200)\n",
+    "### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8af76d9f",
    "metadata": {
     "nbgrader": {
@@ -119,7 +207,7 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal, assert_true\n",
+    "solution = %solution\n",
     "\n",
     "assert_true(len(solution))\n",
     "assert_equal(float(solution[0]),  31200)"
@@ -139,7 +227,7 @@
     }
    },
    "source": [
-    "## 1/b\n",
+    "## Festő bére\n",
     "A festő egy m<sup>2</sup> -t 12 perc alatt fest le, de az egész szobát kétszer festi át. Ha nettó 1800 forintos órabérrel dolgozik, akkor mennyi lesz a nettó végösszeg?\n",
     "\n",
     "Mennyi lesz 27% áfával a végösszeg?"
@@ -161,15 +249,10 @@
    },
    "outputs": [],
    "source": [
-    "with Solution() as solution:\n",
-    "    \n",
-    "    ### BEGIN SOLUTION\n",
-    "    print((90 / 12) * 1800)\n",
-    "    print((90 / 12) * 1800 * 1.27)\n",
-    "    ### END SOLUTION\n",
-    "    \n",
-    "print(solution[0])\n",
-    "print(solution[1])"
+    "### BEGIN SOLUTION\n",
+    "print((90 / 12) * 1800)\n",
+    "print((90 / 12) * 1800 * 1.27)\n",
+    "### END SOLUTION"
    ]
   },
   {
@@ -189,7 +272,7 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal, assert_true\n",
+    "solution = %solution\n",
     "\n",
     "assert_true(len(solution) == 2)\n",
     "assert_equal(float(solution[0]),  13500)\n",
@@ -210,7 +293,7 @@
     }
    },
    "source": [
-    "## 1/c\n",
+    "## Nagymama befőttjei\n",
     "Nagymama 30kg paradicsomot akar befőzni. Kilónként 0.8 liter paradicsompüré lesz a főzés során, és ezeket 6 decis üvegekbe tölti.\n",
     "\n",
     "**Hány üveget tud megtölteni teljesen?**"
@@ -232,13 +315,9 @@
    },
    "outputs": [],
    "source": [
-    "with Solution() as solution:\n",
-    "    \n",
-    "    ### BEGIN SOLUTION\n",
-    "    print((30 * 0.8) / 0.6)\n",
-    "    ### END SOLUTION\n",
-    "    \n",
-    "print(solution[0])"
+    "### BEGIN SOLUTION\n",
+    "print((30 * 0.8) / 0.6)\n",
+    "### END SOLUTION"
    ]
   },
   {
@@ -258,7 +337,7 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal, assert_true\n",
+    "solution = %solution\n",
     "\n",
     "assert_true(len(solution))\n",
     "assert_equal(float(solution[0]),  40)"
@@ -278,7 +357,7 @@
     }
    },
    "source": [
-    "## 1/d\n",
+    "## Autó fogyasztás\n",
     "Az autód 7 litert fogyaszt országúton és 9-et városban. A hévízi üdülésedre 170 kilómétert utazol országúton és 35-öt városban.\n",
     "\n",
     "**Mennyit fogyaszt az autód csak oda?**\n",
@@ -304,17 +383,11 @@
    },
    "outputs": [],
    "source": [
-    "with Solution() as solution:\n",
-    "    \n",
-    "    ### BEGIN SOLUTION\n",
-    "    print((7 * (170/100) + (35/100) * 9))\n",
-    "    print((7 * (170/100) + (35/100) * 9) * 2)\n",
-    "    print(((7 * (170/100) + (35/100) * 9) * 2) * 350)\n",
-    "    ### END SOLUTION\n",
-    "    \n",
-    "print(solution[0])\n",
-    "print(solution[1])\n",
-    "print(solution[2])"
+    "### BEGIN SOLUTION\n",
+    "print((7 * (170/100) + (35/100) * 9))\n",
+    "print((7 * (170/100) + (35/100) * 9) * 2)\n",
+    "print(((7 * (170/100) + (35/100) * 9) * 2) * 350)\n",
+    "### END SOLUTION"
    ]
   },
   {
@@ -334,7 +407,7 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal, assert_true\n",
+    "solution = %solution\n",
     "\n",
     "assert_true(len(solution) == 3)\n",
     "assert_equal(float(solution[0]),  15.05)\n",
@@ -358,9 +431,9 @@
    "source": [
     "# 2. feladatsor - változók\n",
     "\n",
-    "## 2/a\n",
+    "## Autó fogyasztás változókkal\n",
     "\n",
-    "**Oldd meg az 1/d feladatot változókkal.** A szállás és étekezés a kétnapos hétvégére 35 000Ft. Összesen 70 000Ft-od van az utazásra.\n",
+    "**Oldd meg az \"Autó fogyasztás\" feladatot változókkal.** A szállás és étekezés a kétnapos hétvégére 35 000Ft. Összesen 70 000Ft-od van az utazásra.\n",
     "\n",
     "**El tudsz-e menni az útra?**"
    ]
@@ -385,7 +458,7 @@
     "csak_oda = 0\n",
     "oda_vissza = 0\n",
     "teljes_ut_ara = 0\n",
-    "el_tudok_e_menni = False\n",
+    "el_tudok_e_menni = None\n",
     "\n",
     "### BEGIN SOLUTION\n",
     "csak_oda = 7 * 170/100 + 35/100 * 9\n",
@@ -417,12 +490,12 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal, assert_true\n",
+    "solution = %solution\n",
     "\n",
     "assert_equal(csak_oda,  15.05)\n",
     "assert_equal(oda_vissza,  30.1)\n",
     "assert_equal(teljes_ut_ara,  10535.0)\n",
-    "assert_equal(el_tudok_e_menni,  True)"
+    "assert_equal(el_tudok_e_menni,  True if el_tudok_e_menni is not None else None)"
    ]
   },
   {
@@ -439,7 +512,7 @@
     }
    },
    "source": [
-    "## 2/b\n",
+    "## Biztonságos jelszó\n",
     "\n",
     "Ments el egy jelszót a \"password\" nevű változóban! A jelszónak legalább 8 karakter hosszúnak kell lennie, hogy biztonságosnak tekintsük. \n",
     "\n",
@@ -462,14 +535,10 @@
    },
    "outputs": [],
    "source": [
-    "with Solution() as solution:\n",
-    "    \n",
-    "    ### BEGIN SOLUTION\n",
-    "    password = \"arvizturotukorfurogep\"\n",
-    "    print(len(password) > 8)\n",
-    "    ### END SOLUTION\n",
-    "    \n",
-    "print(solution[0])    "
+    "### BEGIN SOLUTION\n",
+    "password = \"arvizturotukorfurogep\"\n",
+    "print(len(password) > 8)\n",
+    "### END SOLUTION "
    ]
   },
   {
@@ -489,7 +558,7 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal, assert_true\n",
+    "solution = %solution\n",
     "\n",
     "assert_true('password' in locals())\n",
     "assert_true(len(solution))\n",
@@ -514,7 +583,7 @@
     }
    },
    "source": [
-    "## 2/c\n",
+    "## Kémia\n",
     "\n",
     "1 dm<sup>3</sup> egységnyi alumínium tömege 2,7kg, a nikkelé pedig 8,8kg.\n",
     "\n",
@@ -539,13 +608,9 @@
    },
    "outputs": [],
    "source": [
-    "with Solution() as solution:\n",
-    "    \n",
-    "    ### BEGIN SOLUTION\n",
-    "    print(1.23 * 2.7 > 0.34 * 8.8)\n",
-    "    ### END SOLUTION\n",
-    "    \n",
-    "print(solution[0])"
+    "### BEGIN SOLUTION\n",
+    "print(1.23 * 2.7 > 0.34 * 8.8)\n",
+    "### END SOLUTION"
    ]
   },
   {
@@ -565,7 +630,7 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal, assert_true\n",
+    "solution = %solution\n",
     "\n",
     "assert_true(len(solution))\n",
     "assert_equal(solution[0],  'True')"
@@ -585,7 +650,7 @@
     }
    },
    "source": [
-    "## 2/d\n",
+    "## Áram fogyasztás\n",
     "\n",
     "A villanyórád 25 amperes. (Vagyis a 230V hálózati feszültséggel 25 * 230 Watt teljesítményt tud kiszolgálni)\n",
     "\n",
@@ -610,13 +675,9 @@
    },
    "outputs": [],
    "source": [
-    "with Solution() as solution:\n",
-    "    \n",
-    "    ### BEGIN SOLUTION\n",
-    "    print(5 * 30 + 1500 + 1200 + 2000 < 25 * 230)\n",
-    "    ### END SOLUTION\n",
-    "    \n",
-    "print(solution[0])"
+    "### BEGIN SOLUTION\n",
+    "print(5 * 30 + 1500 + 1200 + 2000 < 25 * 230)\n",
+    "### END SOLUTION"
    ]
   },
   {
@@ -636,7 +697,7 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal, assert_true\n",
+    "solution = %solution\n",
     "\n",
     "assert_true(len(solution))\n",
     "assert_equal(solution[0],  'True')"
@@ -658,9 +719,9 @@
    "source": [
     "# 3. feladatsor - String, operátorok, vezérlés\n",
     "\n",
-    "## 3/a\n",
+    "## Pultozás\n",
     "\n",
-    "**Kérd be a felhasználó életkorát és kérdezd meg mit iszik!**\n",
+    "**A felhasználó életkorát és italválasztását használva szolgáld őt ki!**\n",
     "\n",
     "Kétféle italt ismerünk: sör és kóla\n",
     "    \n",
@@ -692,28 +753,20 @@
    },
    "outputs": [],
    "source": [
-    "eletkor = 0\n",
-    "ital = \"\"\n",
+    "# Ezeket atirva teszteld a megoldasodat\n",
+    "eletkor = 0  # Lehetseges ertekek: 0-999\n",
+    "ital = \"\"  # Lehetseges ertekek: \"sör\", \"kóla\"\n",
     "\n",
-    "with Solution() as solution:\n",
-    "    \n",
-    "    ### BEGIN SOLUTION   \n",
-    "    eletkor = int(input(\"Add meg az életkorod: \"))\n",
-    "    ital = input(\"Milyen italt kérsz?: \")\n",
-    "    if eletkor < 18 and ital == \"sör\":\n",
-    "        print(\"Sajnos nem adhatok.\")\n",
-    "        exit(1)\n",
-    "    elif eletkor > 60 and ital == \"kóla\":\n",
-    "        print(\"A koffein megemelheti a vérnyomását, sajnos nem adhatok.\")\n",
-    "        exit(1)\n",
-    "    elif ital != \"sör\" or ital != \"kóla\":\n",
-    "        print(\"Sajnos csak sört és kólát tudok adni.\")\n",
-    "        exit(1)\n",
-    "    else:\n",
-    "        print(f\"Parancsoljon, itt a {ital}.\")\n",
-    "    ### END SOLUTION\n",
-    "    \n",
-    "print(solution)"
+    "### BEGIN SOLUTION   \n",
+    "if eletkor < 18 and ital == \"sör\":\n",
+    "    print(\"Sajnos nem adhatok.\")\n",
+    "elif eletkor > 60 and ital == \"kóla\":\n",
+    "    print(\"A koffein megemelheti a vérnyomását, sajnos nem adhatok.\")\n",
+    "elif ital != \"sör\" or ital != \"kóla\":\n",
+    "    print(\"Sajnos csak sört és kólát tudok adni.\")\n",
+    "else:\n",
+    "    print(f\"Parancsoljon, itt a {ital}.\")\n",
+    "### END SOLUTION"
    ]
   },
   {
@@ -733,7 +786,7 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal, assert_true\n",
+    "solution = %solution\n",
     "\n",
     "assert_true(len(solution))\n",
     "\n",
@@ -761,16 +814,16 @@
     }
    },
    "source": [
-    "## 3/b\n",
+    "## Autó fogyasztás változókkal 2\n",
     "\n",
-    "Oldd meg a 2/a (üzemanyag fogyasztás) feladatot úgy, hogz nem előre megadott értékekkel (országúti fogyasztás, országúto megtett út, városi fogyasztás, városban megtetett út, benzin ára) dolgozol, hanem ezeket a felhasználótól kéred be.\n",
+    "Oldd meg a 2/a (üzemanyag fogyasztás) feladatot úgy, hogy nem előre megadott értékekkel (országúti fogyasztás, országúto megtett út, városi fogyasztás, városban megtetett út, benzin ára) dolgozol, hanem ezeket a felhasználótól kéred be.\n",
     "\n",
     "_Ahol szükséges, ne felejtsd el konvertálni az értékeket_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bb33ddb1",
    "metadata": {
     "nbgrader": {
@@ -782,23 +835,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Országúton megtett kilométer: 6\n",
-      "Országúti fogyasztás: 6\n",
-      "Városban megtett kilométer: 6\n",
-      "Városi fogyasztás: 6\n",
-      "Benzin ára: 6\n",
-      "0.72\n",
-      "1.44\n",
-      "504.0\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# A kovetkezo valtozokba kerjuk be az adatokat\n",
     "orszaguti_km = 0\n",
@@ -811,7 +848,7 @@
     "csak_oda = 0\n",
     "oda_vissza = 0\n",
     "teljes_ut_ara = 0\n",
-    "el_tudok_e_menni = False\n",
+    "el_tudok_e_menni = None\n",
     "\n",
     "### BEGIN SOLUTION\n",
     "orszaguti_km = int(input(\"Országúton megtett kilométer: \"))\n",
@@ -834,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d7660306",
    "metadata": {
     "nbgrader": {
@@ -849,12 +886,12 @@
    },
    "outputs": [],
    "source": [
-    "from nose.tools import assert_equal, assert_true\n",
+    "solution = %solution\n",
     "\n",
     "assert_equal(csak_oda,  orszaguti_fogyasztas * orszaguti_km/100 + varosi_km/100 * varosi_fogyasztas)\n",
     "assert_equal(oda_vissza,  csak_oda * 2)\n",
     "assert_equal(teljes_ut_ara,  oda_vissza * 350)\n",
-    "assert_equal(el_tudok_e_menni,  70000 > teljes_ut_ara + 35000)"
+    "assert_equal(el_tudok_e_menni,  70000 > teljes_ut_ara + 35000 if el_tudok_e_menni is not None else None)"
    ]
   }
  ],
