--- a/notebooks/source/python_teljesen_kezdo/002_alapok_vezerlesi_szerkezetek.ipynb
+++ b/notebooks/source/python_teljesen_kezdo/002_alapok_vezerlesi_szerkezetek.ipynb
@@ -76,6 +76,84 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cafb3cea",
+   "metadata": {
+    "nbgrader": {
+     "grade": false,
+     "grade_id": "cell-cc93c17982c20d2a",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "source": [
+    "## Sorminta\n",
+    "\n",
+    "Készíts egy programot, ami képes a következő sormintát kirajzolni:\n",
+    "\n",
+    "`sorok = 5`\n",
+    "\n",
+    "\n",
+    "`#\n",
+    "##\n",
+    "###\n",
+    "####\n",
+    "#####\n",
+    "`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bdef4ec",
+   "metadata": {
+    "nbgrader": {
+     "grade": false,
+     "grade_id": "cell-7e8fc91bf1391d0c",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sorok = 5\n",
+    "\n",
+    "### BEGIN SOLUTION\n",
+    "for i in range(1, sorok + 1):\n",
+    "    print(\"#\" * i)\n",
+    "### END SOLUTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5558bdac",
+   "metadata": {
+    "nbgrader": {
+     "grade": true,
+     "grade_id": "cell-8f82ba6dd106d32a",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "solution = %solution\n",
+    "assert_equal(solution[0], \"#\")\n",
+    "assert_equal(solution[1], \"##\")\n",
+    "assert_equal(solution[2], \"###\")\n",
+    "assert_equal(solution[3], \"####\")\n",
+    "assert_equal(solution[4], \"#####\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd2ab938",
    "metadata": {
     "nbgrader": {
@@ -152,6 +230,89 @@
     "assert_true(type(szam) == int)\n",
     "assert_true(len(solution))\n",
     "assert_true(solution[-1] == 'Gratulalok eltalaltad')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cbb2931",
+   "metadata": {
+    "nbgrader": {
+     "grade": false,
+     "grade_id": "cell-75c28b32b64704ee",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "source": [
+    "## Számoló\n",
+    "\n",
+    "Készíts egy programot, ami `while` ciklust használ, hogy a 1-1000 5el osztható számokat összeadja a `my_sum` változóba."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4ac40bb2",
+   "metadata": {
+    "nbgrader": {
+     "grade": false,
+     "grade_id": "cell-cc810269a1dd3747",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100500\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_sum = 0\n",
+    "\n",
+    "### BEGIN SOLUTION\n",
+    "counter = 1\n",
+    "while True:\n",
+    "    if counter > 1000:\n",
+    "        break\n",
+    "        \n",
+    "    if counter % 5 != 0:\n",
+    "        counter += 1\n",
+    "        continue\n",
+    "        \n",
+    "    my_sum += counter\n",
+    "    counter += 1\n",
+    "### END SOLUTION\n",
+    "print(my_sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3b2d985b",
+   "metadata": {
+    "nbgrader": {
+     "grade": true,
+     "grade_id": "cell-15c3ffa094c1ce7a",
+     "locked": true,
+     "points": 0,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "solution = %solution\n",
+    "\n",
+    "assert_equal(my_sum, 100500)"
    ]
   }
  ],
