--- a/notebooks/source/python_ujrakezdo/013_regularis_kifejezesek.ipynb
+++ b/notebooks/source/python_ujrakezdo/013_regularis_kifejezesek.ipynb
@@ -188,7 +188,7 @@
     "\n",
     "`text = \"jó feketeség volt előttünk, fekete napra ébredtünk, mély fekete víz tükrét néztük\"`\n",
     "\n",
-    "A cenzornak nem tetszik a sok `fekete` szó, írj egy programot ami reguláris kifejezések használatával kitörli ezeket és kiírja az új szöveget.\n"
+    "A cenzornak nem tetszik a sok `fekete` szó bármilyen formája, írj egy programot ami reguláris kifejezések használatával kitörli ezeket és kiírja az új szöveget.\n"
    ]
   },
   {
