--- a/notebooks/source/python_halado/001_functional_programming.ipynb
+++ b/notebooks/source/python_halado/001_functional_programming.ipynb
@@ -697,6 +697,88 @@
     ")\n",
     "assert_equal(list(shift_maker(people, 3)), [('Peter', 'Julia'), ('Peter', 'Andrew'), ('Peter', 'Bobby'), ('Peter', 'Margo'), ('Peter', 'Bill'), ('Peter', 'Alice'), ('Peter', 'Anna'), ('Julia', 'Andrew'), ('Julia', 'Bobby'), ('Julia', 'Margo'), ('Julia', 'Bill'), ('Julia', 'Alice'), ('Julia', 'Anna'), ('Andrew', 'Bobby'), ('Andrew', 'Margo'), ('Andrew', 'Bill'), ('Andrew', 'Alice'), ('Andrew', 'Anna'), ('Bobby', 'Margo'), ('Bobby', 'Bill'), ('Bobby', 'Alice'), ('Bobby', 'Anna'), ('Margo', 'Bill'), ('Margo', 'Alice'), ('Margo', 'Anna'), ('Bill', 'Alice'), ('Bill', 'Anna'), ('Alice', 'Anna')])\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4bceb05",
+   "metadata": {
+    "nbgrader": {
+     "grade": false,
+     "grade_id": "cell-232683ac057245ed",
+     "locked": true,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "source": [
+    "## Üzenetek\n",
+    "A hálózaton számokat fogadunk, amik egy listába kerülnek letárolásra. A nem 0 karakterek egymás után egy blokkot alkotnak, a 0 karakterek pedig \"csendet\" jelentenek.\n",
+    "\n",
+    "Írj egy Python programot, ami az eredeti listából kiválogatja az értelmezhető blokkokat, és előállít egy olyan listát amikben csak ezek vannak benne.\n",
+    "\n",
+    "Pl:\n",
+    "```python\n",
+    "[1,3,5,0,0,0,0,7,7,0,0,11,0,5,6,7] => [[1,3,5], [7,7], [11], [5,6,7]]\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b09b76ac",
+   "metadata": {
+    "nbgrader": {
+     "grade": false,
+     "grade_id": "cell-aba5370efa4a5304",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3, 4, 6, 2], [6, 7, 6, 9, 10], [7, 4, 4], [5, 3, 2, 9, 7, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools as it\n",
+    "nums = [3,4,6,2,0,0,0,0,0,0,6,7,6,9,10,0,0,0,0,0,7,4,4,0,0,0,0,0,0,5,3,2,9,7,1]\n",
+    "\n",
+    "## BEGIN SOLUTION\n",
+    "def solve(lst):\n",
+    "    result = [ list(x[1]) for x in it.groupby(lst, lambda x: x == 0) if not x[0] ]\n",
+    "    return result\n",
+    "print(solve(nums))\n",
+    "### END SOLUTION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8902ba99",
+   "metadata": {
+    "nbgrader": {
+     "grade": true,
+     "grade_id": "cell-9e43725030452de0",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "solution = %solution\n",
+    "import ast\n",
+    "assert_equal(ast.literal_eval(solution[0]), [[3, 4, 6, 2], [6, 7, 6, 9, 10], [7, 4, 4], [5, 3, 2, 9, 7, 1]])"
+   ]
   }
  ],
  "metadata": {
